# vkBasalt_overlay

./: .gitignore  CLAUDE.md  README.md  config-edit-feature.txt  general_todo.txt  imgui.ini  meson.build  meson_options.txt
.github/workflows/: build.yml
config/: meson.build  vkBasalt-overlay.json.in
docs/: config-system.md
src/: basalt.cpp  config.cpp  config.hpp  config_serializer.cpp  config_serializer.hpp  effect_config.hpp  effect_registry.cpp  effect_registry.hpp  effect_reshade.cpp  imgui_overlay.cpp  imgui_overlay.hpp  input_blocker.cpp  input_blocker.hpp  keyboard_input_x11.cpp  logger.cpp  logger.hpp  logical_device.hpp  logical_swapchain.cpp  logical_swapchain.hpp  meson.build  mouse_input.cpp  render_pass_tracker.hpp  reshade_parser.cpp  reshade_parser.hpp  vkfuncs.hpp
src/effects/: effect_registry.cpp  effect_registry.hpp  effect_reshade.cpp  effect_reshade.hpp  effect_simple.cpp  effect_simple.hpp
src/effects/builtin/: builtin_effects.cpp  effect_lut.hpp
src/effects/params/: effect_param.hpp
src/overlay/: imgui_overlay.cpp  imgui_overlay.hpp  view_add_effects.cpp  view_configs.cpp  view_debug.cpp  view_diagnostics.cpp  view_main.cpp  view_render_config.cpp  view_settings.cpp
src/overlay/params/fields/: field_float2.cpp  field_float3.cpp  field_float4.cpp
